<resources>
    <string name="app_name">FilmLib</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="menu_listas">Mis Listas</string>
    <string name="peliculas">Peliculas</string>
    <string name="series">Series</string>
    <string name="agregar">Agregar</string>
    <string name="favoritas">Favoritas</string>
    <string name="vistas">Vistas</string>

    <string name="subtitulo">Carles Roman - LS31360</string>
    <string name="correo_salle">ls31360@salleurl.edu</string>


    <string name="nombre_asc">Nombre - ASC</string>
    <string name="nombre_desc">Nombre - DESC</string>
    <string name="genero_asc">Genero - ASC</string>
    <string name="genero_desc">Genero - DESC</string>
    <string name="fecha_asc">Fecha - ASC</string>
    <string name="fecha_desc">Fecha - DESC</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="edit_titulo">Titulo</string>
    <string name="edit_genero">Genero</string>
    <string name="edit_estreno">Estreno</string>
    <string name="edit_temporadas">Temporadas</string>
    <string name="edit_director">Director</string>
    <string name="editar_save">Guardar</string>
    <string name="editar_delete">Eliminar</string>


</resources>
